# xgc2-vrpn-router

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: build-debs.yml  ci.yml  release.yml
.xgc2/: product.yml
.xgc2/scripts/: build_deb_in_docker.sh  build_debs_in_docker.sh  check_core_libraries.sh  check_cpp_quality.sh  check_installed_package.sh  check_installed_packages.sh  check_package_compliance.sh  package_deb.sh  package_debs.sh  publish_apt_repo.sh  run_official_vrpn_e2e.sh  xgc2_artifact_manifest.py
config/: router.conf  routes.example.yaml
include/vrpn_router/: diagnostics_publisher.h  diagnostics_utils.h  pose_route.h  ros_pose_adapter.h  route_config.h  topic_utils.h  vrpn_router_node.h  xmlrpc_config.h
include/vrpn_router/core/: health_monitor.h  input_rate_detector.h  jump_detector.h  pose_transformer.h  rate_limiter.h  reference_delta_detector.h  route_processor.h  stuck_detector.h  timeout_detector.h  types.h
launch/: vrpn_router.launch
scripts/: vrpn_router_extreme_sim.py
src/: main.cpp  vrpn_router_main.cpp  vrpn_router_node.cpp
src/core/: route_processor.cpp
systemd/: xgc2-vrpn-router.service
test/: core_tests.cpp  routes_complex.yaml  vrpn_router_e2e.py  vrpn_router_e2e.test  vrpn_router_protocol_e2e.py  vrpn_router_protocol_e2e.test  vrpn_test_server_node.cpp
